fix-newInstance